--- a/client/package.json
+++ b/client/package.json
@@ -9,11 +9,14 @@
     "@testing-library/user-event": "^13.5.0",
     "antd": "^4.23.5",
     "axios": "^1.1.2",
+    "daisyui": "^2.31.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.4",
+    "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
     "redux": "^4.2.0",
+    "remixicon": "^2.5.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -39,5 +42,11 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.12",
+    "postcss": "^8.4.18",
+    "tailwindcss": "^3.1.8"
+  },
+  "proxy": "http://localhost:5000"
 }
