--- a/client/package.json
+++ b/client/package.json
@@ -14,9 +14,11 @@
     "antd": "^4.23.5",
     "axios": "^1.1.2",
     "daisyui": "^2.31.0",
+    "list-of-moroccan-cities": "^1.0.4",
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.39.1",
     "react-redux": "^8.0.4",
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
