--- a/client/package.json
+++ b/client/package.json
@@ -16,13 +16,16 @@
     "daisyui": "^2.31.0",
     "list-of-moroccan-cities": "^1.0.4",
     "moment": "^2.29.4",
+    "qrcode": "^1.5.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.39.1",
+    "react-qr-code": "^2.0.8",
     "react-redux": "^8.0.4",
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
     "react-stripe-checkout": "^2.6.3",
+    "react-to-print": "^2.14.8",
     "redux": "^4.2.0",
     "remixicon": "^2.5.0",
     "web-vitals": "^2.1.4"
